unagi/Compiler/antlr/unagiParser.swift
// Generated from unagi.g4 by ANTLR 4.7.2
import Antlr4

open class unagiParser: Parser {

	internal static var _decisionToDFA: [DFA] = {
          var decisionToDFA = [DFA]()
          let length = unagiParser._ATN.getNumberOfDecisions()
          for i in 0..<length {
            decisionToDFA.append(DFA(unagiParser._ATN.getDecisionState(i)!, i))
           }
           return decisionToDFA
     }()

	internal static let _sharedContextCache = PredictionContextCache()

	public
	enum Tokens: Int {
		case EOF = -1, T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, 
                 T__6 = 7, T__7 = 8, T__8 = 9, T__9 = 10, T__10 = 11, T__11 = 12, 
                 T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17, 
                 T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, 
                 T__22 = 23, ARROW = 24, ASG = 25, LESS = 26, MORETHAN = 27, 
                 LESSOREQUAL = 28, MOREOREQUAL = 29, EQUAL = 30, NOTEQUAL = 31, 
                 SUM = 32, SUB = 33, MULT = 34, DIV = 35, LEFTP = 36, RIGHTP = 37, 
                 LEFTBRACE = 38, RIGHTBRACE = 39, NUM = 40, DECIMAL = 41, 
                 BOOL = 42, CHAR = 43, PHRASE = 44, IF = 45, ELIF = 46, 
                 ELSE = 47, WHILE = 48, FOR = 49, EMPTY = 50, VAR = 51, 
                 PRINT = 52, RETURN = 53, FUNC = 54, AND = 55, OR = 56, 
                 LIST = 57, WHITESPACE = 58, NEWLINE = 59, ID = 60, CTE_N = 61, 
                 CTE_D = 62, CTE_C = 63, CTE_P = 64
	}

	public
	static let RULE_program = 0, RULE_declaration = 1, RULE_main = 2, RULE_statement = 3, 
            RULE_loop = 4, RULE_assigment = 5, RULE_functions = 6, RULE_functype = 7, 
            RULE_type = 8, RULE_list = 9, RULE_argfunc = 10, RULE_superexp = 11, 
            RULE_expression = 12, RULE_exp = 13, RULE_term = 14, RULE_factor = 15, 
            RULE_constant = 16, RULE_body = 17, RULE_condition = 18, RULE_printing = 19, 
            RULE_listfunc = 20, RULE_emptyfunccall = 21, RULE_special = 22, 
            RULE_root = 23, RULE_perimeter = 24, RULE_drawsquare = 25, RULE_drawtriangle = 26, 
            RULE_drawrectangle = 27, RULE_drawcircle = 28, RULE_color = 29

	public
	static let ruleNames: [String] = [
		"program", "declaration", "main", "statement", "loop", "assigment", "functions", 
		"functype", "type", "list", "argfunc", "superexp", "expression", "exp", 
		"term", "factor", "constant", "body", "condition", "printing", "listfunc", 
		"emptyfunccall", "special", "root", "perimeter", "drawsquare", "drawtriangle", 
		"drawrectangle", "drawcircle", "color"
	]

	private static let _LITERAL_NAMES: [String?] = [
		nil, "'program'", "':'", "','", "';'", "'start'", "'.'", "'true'", "'false'", 
		"'get'", "'remove'", "'add'", "'first'", "'last'", "'root'", "'perimeter'", 
		"'drawSquare'", "'drawTriangle'", "'drawRectangle'", "'drawCircle'", "'red'", 
		"'blue'", "'green'", "'yellow'", "'->'", "'='", "'<'", "'>'", "'<='", 
		"'>='", "'=='", "'<>'", "'+'", "'-'", "'*'", "'/'", "'('", "')'", "'{'", 
		"'}'", "'num'", "'decimal'", "'bool'", "'char'", "'phrase'", "'if'", "'elif'", 
		"'else'", "'while'", "'for'", "'empty'", "'var'", "'print'", "'return'", 
		"'func'", "'and'", "'or'", "'list'"
	]
	private static let _SYMBOLIC_NAMES: [String?] = [
		nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, 
		nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, "ARROW", "ASG", "LESS", 
		"MORETHAN", "LESSOREQUAL", "MOREOREQUAL", "EQUAL", "NOTEQUAL", "SUM", 
		"SUB", "MULT", "DIV", "LEFTP", "RIGHTP", "LEFTBRACE", "RIGHTBRACE", "NUM", 
		"DECIMAL", "BOOL", "CHAR", "PHRASE", "IF", "ELIF", "ELSE", "WHILE", "FOR", 
		"EMPTY", "VAR", "PRINT", "RETURN", "FUNC", "AND", "OR", "LIST", "WHITESPACE", 
		"NEWLINE", "ID", "CTE_N", "CTE_D", "CTE_C", "CTE_P"
	]
	public
	static let VOCABULARY = Vocabulary(_LITERAL_NAMES, _SYMBOLIC_NAMES)

	override open
	func getGrammarFileName() -> String { return "unagi.g4" }

	override open
	func getRuleNames() -> [String] { return unagiParser.ruleNames }

	override open
	func getSerializedATN() -> String { return unagiParser._serializedATN }

	override open
	func getATN() -> ATN { return unagiParser._ATN }


	override open
	func getVocabulary() -> Vocabulary {
	    return unagiParser.VOCABULARY
	}

	override public
	init(_ input:TokenStream) throws {
	    RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION)
		try super.init(input)
		_interp = ParserATNSimulator(self,unagiParser._ATN,unagiParser._decisionToDFA, unagiParser._sharedContextCache)
	}


	public class ProgramContext: ParserRuleContext {
			open
			func ID() -> TerminalNode? {
				return getToken(unagiParser.Tokens.ID.rawValue, 0)
			}
			open
			func main() -> MainContext? {
				return getRuleContext(MainContext.self, 0)
			}
			open
			func declaration() -> [DeclarationContext] {
				return getRuleContexts(DeclarationContext.self)
			}
			open
			func declaration(_ i: Int) -> DeclarationContext? {
				return getRuleContext(DeclarationContext.self, i)
			}
			open
			func functions() -> [FunctionsContext] {
				return getRuleContexts(FunctionsContext.self)
			}
			open
			func functions(_ i: Int) -> FunctionsContext? {
				return getRuleContext(FunctionsContext.self, i)
			}
		override open
		func getRuleIndex() -> Int {
			return unagiParser.RULE_program
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? unagiListener {
				listener.enterProgram(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? unagiListener {
				listener.exitProgram(self)
			}
		}
	}
	@discardableResult
	 open func program() throws -> ProgramContext {
		var _localctx: ProgramContext = ProgramContext(_ctx, getState())
		try enterRule(_localctx, 0, unagiParser.RULE_program)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(60)
		 	try match(unagiParser.Tokens.T__0.rawValue)
		 	setState(61)
		 	try match(unagiParser.Tokens.ID.rawValue)
		 	setState(62)
		 	try match(unagiParser.Tokens.T__1.rawValue)
		 	setState(66)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == unagiParser.Tokens.VAR.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(63)
		 		try declaration()


		 		setState(68)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}
		 	setState(72)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == unagiParser.Tokens.FUNC.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(69)
		 		try functions()


		 		setState(74)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}
		 	setState(75)
		 	try main()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class DeclarationContext: ParserRuleContext {
			open
			func VAR() -> TerminalNode? {
				return getToken(unagiParser.Tokens.VAR.rawValue, 0)
			}
			open
			func type() -> TypeContext? {
				return getRuleContext(TypeContext.self, 0)
			}
			open
			func ID() -> [TerminalNode] {
				return getTokens(unagiParser.Tokens.ID.rawValue)
			}
			open
			func ID(_ i:Int) -> TerminalNode? {
				return getToken(unagiParser.Tokens.ID.rawValue, i)
			}
		override open
		func getRuleIndex() -> Int {
			return unagiParser.RULE_declaration
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? unagiListener {
				listener.enterDeclaration(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? unagiListener {
				listener.exitDeclaration(self)
			}
		}
	}
	@discardableResult
	 open func declaration() throws -> DeclarationContext {
		var _localctx: DeclarationContext = DeclarationContext(_ctx, getState())
		try enterRule(_localctx, 2, unagiParser.RULE_declaration)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(77)
		 	try match(unagiParser.Tokens.VAR.rawValue)
		 	setState(78)
		 	try type()
		 	setState(79)
		 	try match(unagiParser.Tokens.ID.rawValue)
		 	setState(84)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == unagiParser.Tokens.T__2.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(80)
		 		try match(unagiParser.Tokens.T__2.rawValue)
		 		setState(81)
		 		try match(unagiParser.Tokens.ID.rawValue)


		 		setState(86)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}
		 	setState(87)
		 	try match(unagiParser.Tokens.T__3.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class MainContext: ParserRuleContext {
			open
			func LEFTBRACE() -> TerminalNode? {
				return getToken(unagiParser.Tokens.LEFTBRACE.rawValue, 0)
			}
			open
			func RIGHTBRACE() -> TerminalNode? {
				return getToken(unagiParser.Tokens.RIGHTBRACE.rawValue, 0)
			}
			open
			func declaration() -> [DeclarationContext] {
				return getRuleContexts(DeclarationContext.self)
			}
			open
			func declaration(_ i: Int) -> DeclarationContext? {
				return getRuleContext(DeclarationContext.self, i)
			}
			open
			func statement() -> [StatementContext] {
				return getRuleContexts(StatementContext.self)
			}
			open
			func statement(_ i: Int) -> StatementContext? {
				return getRuleContext(StatementContext.self, i)
			}
		override open
		func getRuleIndex() -> Int {
			return unagiParser.RULE_main
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? unagiListener {
				listener.enterMain(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? unagiListener {
				listener.exitMain(self)
			}
		}
	}
	@discardableResult
	 open func main() throws -> MainContext {
		var _localctx: MainContext = MainContext(_ctx, getState())
		try enterRule(_localctx, 4, unagiParser.RULE_main)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(89)
		 	try match(unagiParser.Tokens.T__4.rawValue)
		 	setState(90)
		 	try match(unagiParser.Tokens.LEFTBRACE.rawValue)
		 	setState(94)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == unagiParser.Tokens.VAR.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(91)
		 		try declaration()


		 		setState(96)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}
		 	setState(100)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = {  () -> Bool in
		 	   let testArray: [Int] = [_la, unagiParser.Tokens.T__13.rawValue,unagiParser.Tokens.T__14.rawValue,unagiParser.Tokens.T__15.rawValue,unagiParser.Tokens.T__16.rawValue,unagiParser.Tokens.T__17.rawValue,unagiParser.Tokens.T__18.rawValue,unagiParser.Tokens.IF.rawValue,unagiParser.Tokens.WHILE.rawValue,unagiParser.Tokens.FOR.rawValue,unagiParser.Tokens.PRINT.rawValue,unagiParser.Tokens.RETURN.rawValue,unagiParser.Tokens.ID.rawValue]
		 	    return  Utils.testBitLeftShiftArray(testArray, 0)
		 	}()
		 	      return testSet
		 	 }()) {
		 		setState(97)
		 		try statement()


		 		setState(102)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}
		 	setState(103)
		 	try match(unagiParser.Tokens.RIGHTBRACE.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class StatementContext: ParserRuleContext {
			open
			func assigment() -> AssigmentContext? {
				return getRuleContext(AssigmentContext.self, 0)
			}
			open
			func condition() -> ConditionContext? {
				return getRuleContext(ConditionContext.self, 0)
			}
			open
			func printing() -> PrintingContext? {
				return getRuleContext(PrintingContext.self, 0)
			}
			open
			func special() -> SpecialContext? {
				return getRuleContext(SpecialContext.self, 0)
			}
			open
			func emptyfunccall() -> EmptyfunccallContext? {
				return getRuleContext(EmptyfunccallContext.self, 0)
			}
			open
			func loop() -> LoopContext? {
				return getRuleContext(LoopContext.self, 0)
			}
			open
			func RETURN() -> TerminalNode? {
				return getToken(unagiParser.Tokens.RETURN.rawValue, 0)
			}
			open
			func superexp() -> SuperexpContext? {
				return getRuleContext(SuperexpContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return unagiParser.RULE_statement
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? unagiListener {
				listener.enterStatement(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? unagiListener {
				listener.exitStatement(self)
			}
		}
	}
	@discardableResult
	 open func statement() throws -> StatementContext {
		var _localctx: StatementContext = StatementContext(_ctx, getState())
		try enterRule(_localctx, 6, unagiParser.RULE_statement)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(115)
		 	try _errHandler.sync(self)
		 	switch(try getInterpreter().adaptivePredict(_input,5, _ctx)) {
		 	case 1:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(105)
		 		try assigment()

		 		break
		 	case 2:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(106)
		 		try condition()

		 		break
		 	case 3:
		 		try enterOuterAlt(_localctx, 3)
		 		setState(107)
		 		try printing()

		 		break
		 	case 4:
		 		try enterOuterAlt(_localctx, 4)
		 		setState(108)
		 		try special()

		 		break
		 	case 5:
		 		try enterOuterAlt(_localctx, 5)
		 		setState(109)
		 		try emptyfunccall()

		 		break
		 	case 6:
		 		try enterOuterAlt(_localctx, 6)
		 		setState(110)
		 		try loop()

		 		break
		 	case 7:
		 		try enterOuterAlt(_localctx, 7)
		 		setState(111)
		 		try match(unagiParser.Tokens.RETURN.rawValue)
		 		setState(112)
		 		try superexp()
		 		setState(113)
		 		try match(unagiParser.Tokens.T__3.rawValue)

		 		break
		 	default: break
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class LoopContext: ParserRuleContext {
			open
			func WHILE() -> TerminalNode? {
				return getToken(unagiParser.Tokens.WHILE.rawValue, 0)
			}
			open
			func LEFTP() -> TerminalNode? {
				return getToken(unagiParser.Tokens.LEFTP.rawValue, 0)
			}
			open
			func superexp() -> [SuperexpContext] {
				return getRuleContexts(SuperexpContext.self)
			}
			open
			func superexp(_ i: Int) -> SuperexpContext? {
				return getRuleContext(SuperexpContext.self, i)
			}
			open
			func RIGHTP() -> TerminalNode? {
				return getToken(unagiParser.Tokens.RIGHTP.rawValue, 0)
			}
			open
			func body() -> BodyContext? {
				return getRuleContext(BodyContext.self, 0)
			}
			open
			func FOR() -> TerminalNode? {
				return getToken(unagiParser.Tokens.FOR.rawValue, 0)
			}
			open
			func ARROW() -> TerminalNode? {
				return getToken(unagiParser.Tokens.ARROW.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return unagiParser.RULE_loop
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? unagiListener {
				listener.enterLoop(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? unagiListener {
				listener.exitLoop(self)
			}
		}
	}
	@discardableResult
	 open func loop() throws -> LoopContext {
		var _localctx: LoopContext = LoopContext(_ctx, getState())
		try enterRule(_localctx, 8, unagiParser.RULE_loop)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(131)
		 	try _errHandler.sync(self)
		 	switch (unagiParser.Tokens(rawValue: try _input.LA(1))!) {
		 	case .WHILE:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(117)
		 		try match(unagiParser.Tokens.WHILE.rawValue)
		 		setState(118)
		 		try match(unagiParser.Tokens.LEFTP.rawValue)
		 		setState(119)
		 		try superexp()
		 		setState(120)
		 		try match(unagiParser.Tokens.RIGHTP.rawValue)
		 		setState(121)
		 		try body()

		 		break

		 	case .FOR:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(123)
		 		try match(unagiParser.Tokens.FOR.rawValue)
		 		setState(124)
		 		try match(unagiParser.Tokens.LEFTP.rawValue)
		 		setState(125)
		 		try superexp()
		 		setState(126)
		 		try match(unagiParser.Tokens.ARROW.rawValue)
		 		setState(127)
		 		try superexp()
		 		setState(128)
		 		try match(unagiParser.Tokens.RIGHTP.rawValue)
		 		setState(129)
		 		try body()

		 		break
		 	default:
		 		throw ANTLRException.recognition(e: NoViableAltException(self))
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class AssigmentContext: ParserRuleContext {
			open
			func ID() -> TerminalNode? {
				return getToken(unagiParser.Tokens.ID.rawValue, 0)
			}
			open
			func ASG() -> TerminalNode? {
				return getToken(unagiParser.Tokens.ASG.rawValue, 0)
			}
			open
			func superexp() -> SuperexpContext? {
				return getRuleContext(SuperexpContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return unagiParser.RULE_assigment
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? unagiListener {
				listener.enterAssigment(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? unagiListener {
				listener.exitAssigment(self)
			}
		}
	}
	@discardableResult
	 open func assigment() throws -> AssigmentContext {
		var _localctx: AssigmentContext = AssigmentContext(_ctx, getState())
		try enterRule(_localctx, 10, unagiParser.RULE_assigment)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(133)
		 	try match(unagiParser.Tokens.ID.rawValue)
		 	setState(134)
		 	try match(unagiParser.Tokens.ASG.rawValue)
		 	setState(135)
		 	try superexp()
		 	setState(136)
		 	try match(unagiParser.Tokens.T__3.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class FunctionsContext: ParserRuleContext {
			open
			func FUNC() -> TerminalNode? {
				return getToken(unagiParser.Tokens.FUNC.rawValue, 0)
			}
			open
			func functype() -> FunctypeContext? {
				return getRuleContext(FunctypeContext.self, 0)
			}
			open
			func ID() -> TerminalNode? {
				return getToken(unagiParser.Tokens.ID.rawValue, 0)
			}
			open
			func LEFTP() -> TerminalNode? {
				return getToken(unagiParser.Tokens.LEFTP.rawValue, 0)
			}
			open
			func argfunc() -> ArgfuncContext? {
				return getRuleContext(ArgfuncContext.self, 0)
			}
			open
			func RIGHTP() -> TerminalNode? {
				return getToken(unagiParser.Tokens.RIGHTP.rawValue, 0)
			}
			open
			func LEFTBRACE() -> TerminalNode? {
				return getToken(unagiParser.Tokens.LEFTBRACE.rawValue, 0)
			}
			open
			func RIGHTBRACE() -> TerminalNode? {
				return getToken(unagiParser.Tokens.RIGHTBRACE.rawValue, 0)
			}
			open
			func declaration() -> [DeclarationContext] {
				return getRuleContexts(DeclarationContext.self)
			}
			open
			func declaration(_ i: Int) -> DeclarationContext? {
				return getRuleContext(DeclarationContext.self, i)
			}
			open
			func statement() -> [StatementContext] {
				return getRuleContexts(StatementContext.self)
			}
			open
			func statement(_ i: Int) -> StatementContext? {
				return getRuleContext(StatementContext.self, i)
			}
		override open
		func getRuleIndex() -> Int {
			return unagiParser.RULE_functions
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? unagiListener {
				listener.enterFunctions(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? unagiListener {
				listener.exitFunctions(self)
			}
		}
	}
	@discardableResult
	 open func functions() throws -> FunctionsContext {
		var _localctx: FunctionsContext = FunctionsContext(_ctx, getState())
		try enterRule(_localctx, 12, unagiParser.RULE_functions)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(138)
		 	try match(unagiParser.Tokens.FUNC.rawValue)
		 	setState(139)
		 	try functype()
		 	setState(140)
		 	try match(unagiParser.Tokens.ID.rawValue)
		 	setState(141)
		 	try match(unagiParser.Tokens.LEFTP.rawValue)
		 	setState(142)
		 	try argfunc()
		 	setState(143)
		 	try match(unagiParser.Tokens.RIGHTP.rawValue)
		 	setState(144)
		 	try match(unagiParser.Tokens.LEFTBRACE.rawValue)
		 	setState(148)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == unagiParser.Tokens.VAR.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(145)
		 		try declaration()


		 		setState(150)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}
		 	setState(154)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = {  () -> Bool in
		 	   let testArray: [Int] = [_la, unagiParser.Tokens.T__13.rawValue,unagiParser.Tokens.T__14.rawValue,unagiParser.Tokens.T__15.rawValue,unagiParser.Tokens.T__16.rawValue,unagiParser.Tokens.T__17.rawValue,unagiParser.Tokens.T__18.rawValue,unagiParser.Tokens.IF.rawValue,unagiParser.Tokens.WHILE.rawValue,unagiParser.Tokens.FOR.rawValue,unagiParser.Tokens.PRINT.rawValue,unagiParser.Tokens.RETURN.rawValue,unagiParser.Tokens.ID.rawValue]
		 	    return  Utils.testBitLeftShiftArray(testArray, 0)
		 	}()
		 	      return testSet
		 	 }()) {
		 		setState(151)
		 		try statement()


		 		setState(156)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}
		 	setState(157)
		 	try match(unagiParser.Tokens.RIGHTBRACE.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class FunctypeContext: ParserRuleContext {
			open
			func EMPTY() -> TerminalNode? {
				return getToken(unagiParser.Tokens.EMPTY.rawValue, 0)
			}
			open
			func type() -> TypeContext? {
				return getRuleContext(TypeContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return unagiParser.RULE_functype
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? unagiListener {
				listener.enterFunctype(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? unagiListener {
				listener.exitFunctype(self)
			}
		}
	}
	@discardableResult
	 open func functype() throws -> FunctypeContext {
		var _localctx: FunctypeContext = FunctypeContext(_ctx, getState())
		try enterRule(_localctx, 14, unagiParser.RULE_functype)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(161)
		 	try _errHandler.sync(self)
		 	switch (unagiParser.Tokens(rawValue: try _input.LA(1))!) {
		 	case .EMPTY:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(159)
		 		try match(unagiParser.Tokens.EMPTY.rawValue)

		 		break
		 	case .NUM:fallthrough
		 	case .DECIMAL:fallthrough
		 	case .BOOL:fallthrough
		 	case .CHAR:fallthrough
		 	case .PHRASE:fallthrough
		 	case .LIST:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(160)
		 		try type()

		 		break
		 	default:
		 		throw ANTLRException.recognition(e: NoViableAltException(self))
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class TypeContext: ParserRuleContext {
			open
			func NUM() -> TerminalNode? {
				return getToken(unagiParser.Tokens.NUM.rawValue, 0)
			}
			open
			func DECIMAL() -> TerminalNode? {
				return getToken(unagiParser.Tokens.DECIMAL.rawValue, 0)
			}
			open
			func BOOL() -> TerminalNode? {
				return getToken(unagiParser.Tokens.BOOL.rawValue, 0)
			}
			open
			func CHAR() -> TerminalNode? {
				return getToken(unagiParser.Tokens.CHAR.rawValue, 0)
			}
			open
			func PHRASE() -> TerminalNode? {
				return getToken(unagiParser.Tokens.PHRASE.rawValue, 0)
			}
			open
			func list() -> ListContext? {
				return getRuleContext(ListContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return unagiParser.RULE_type
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? unagiListener {
				listener.enterType(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? unagiListener {
				listener.exitType(self)
			}
		}
	}
	@discardableResult
	 open func type() throws -> TypeContext {
		var _localctx: TypeContext = TypeContext(_ctx, getState())
		try enterRule(_localctx, 16, unagiParser.RULE_type)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(169)
		 	try _errHandler.sync(self)
		 	switch (unagiParser.Tokens(rawValue: try _input.LA(1))!) {
		 	case .NUM:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(163)
		 		try match(unagiParser.Tokens.NUM.rawValue)

		 		break

		 	case .DECIMAL:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(164)
		 		try match(unagiParser.Tokens.DECIMAL.rawValue)

		 		break

		 	case .BOOL:
		 		try enterOuterAlt(_localctx, 3)
		 		setState(165)
		 		try match(unagiParser.Tokens.BOOL.rawValue)

		 		break
